tests/neg/i25077.check
-- Error: tests/neg/i25077.scala:6:2 -----------------------------------------------------------------------------------
 6 |  for // error behavior change in 3.8
   |  ^
   |  For comprehension with multiple val assignments may change result type in 3.8
   |
 7 |    (k, v) <- Map(1 -> 1, 2 -> 1, 3 -> 1)
 8 |...
11 |  yield (a+y, b+z)
